[project]
name = "rag-agent"
version = "0.1.0"
description = "A RAG agent application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
